# volume-visualiser

./: .hgignore  README.md  readme.txt
4DMRI/: cyc_231_00_spectrum_8_balance_1000.tfi  cyc_231_01_spectrum_8_balance_1000.tfi  cyc_231_03_spectrum_8_balance_1000.tfi  cyc_231_05_spectrum_8_balance_1000.tfi  cyc_231_06_spectrum_8_balance_1000.tfi  cyc_231_08_spectrum_8_balance_1000.tfi  cyc_231_09_spectrum_8_balance_1000.tfi  cyc_231_10_spectrum_8_balance_1000.tfi  cyc_231_11_spectrum_8_balance_1000.tfi  cyc_231_13_spectrum_8_balance_1000.tfi  example4DMRI.vws  sl010.vws  sl010_0001_spectrum_8_balance_1000.tfi  sl010_0040_spectrum_8_balance_1000.tfi  sl010_0080_spectrum_8_balance_1000.tfi  sl010_0120_spectrum_8_balance_1000.tfi  sl010_0160_spectrum_8_balance_1000.tfi  sl010_0200_spectrum_8_balance_1000.tfi  sl010_clipplane.vws  sl014.vws  sl014_0001_spectrum_8_balance_1000.tfi  sl014_0040_spectrum_8_balance_1000.tfi  sl014_0080_spectrum_8_balance_1000.tfi  sl014_0120_spectrum_8_balance_1000.tfi  sl014_0160_spectrum_8_balance_1000.tfi  sl014_0200_spectrum_8_balance_1000.tfi
BoxWidget2/: CMakeLists.txt  my_BoxWidget2.cxx
ExtractVOI/: CMakeLists.txt
Histogram/: 0.csv  012.xlsx  1.csv  2.csv  CMakeLists.txt  HistogramBarChart.cpp  HistogramXYPlot.cpp  ImageAccumulateGreyscale.cpp  histogram.cpp  rgb_histogram.csv  rgb_histogram_Lenna.xlsx  volume_histogram.cpp
TestImageCroppingRegionsWidget/: CMakeLists.txt  TestImageCroppingRegionsWidget.cxx
VTK/: CMakeLists.txt
VolumeRenderer/: 0.csv  CMakeLists - Qt5.txt  CMakeLists.txt  K_Means_PP_Generic.h  MyQGraphicsScene.h  RayCastType.h  TimeVaryingData.h  TransferFunctionProperty.h  VolumePropertyXML.h  VolumeRenderer.pro  VolumeRenderer.pro.user.3.2-pre1  VolumeRenderer.pro.user.d26333a  VolumeRenderer.pro.user.d26333a.2.7pre1  WS2_32.props  energy_function.csv  energy_function_CT-Knee.xlsx  energy_function_CT-Knee_spectrum16.xlsx  energy_function_CT-Knee_spectrum3.xlsx  energy_function_CT-Knee_spectrum32.xlsx  energy_function_CT-Knee_spectrum4.xlsx  energy_function_CT-Knee_spectrum5.xlsx  energy_function_CT-Knee_spectrum6.xlsx  energy_function_CT-Knee_spectrum64.xlsx  energy_function_CT-Knee_spectrum8.xlsx  energy_function_CT-Knee_spectrum_128.xlsx  energy_function_CT-Knee_spectrum_16.xlsx  energy_function_CT-Knee_spectrum_16_balance.xlsx  energy_function_CT-Knee_spectrum_16_edge.xlsx  energy_function_CT-Knee_spectrum_18_edge.xlsx  energy_function_CT-Knee_spectrum_32.xlsx  energy_function_CT-Knee_spectrum_4.xlsx  energy_function_CT-Knee_spectrum_6.xlsx  energy_function_CT-Knee_spectrum_64.xlsx  energy_function_CT-Knee_spectrum_6_edge.xlsx  energy_function_CT-Knee_spectrum_8.xlsx  energy_function_Engine.xlsx  energy_function_VisMale.xlsx  energy_function_region.csv  energy_function_region_CT-Knee_distance.xlsx  energy_function_region_CT-Knee_selection.xlsx  (+23 more)
VolumeRenderer/CTK/Libs/Core/: ctkHistogram.h  ctkTransferFunction.h  ctkTransferFunctionRepresentation.h  ctkUtils.cpp  ctkUtils.h
VolumeRenderer/CTK/Libs/Core/Testing/Cpp/: ctkTransferFunctionRepresentationTest1.cpp  ctkTransferFunctionRepresentationTest2.cpp  ctkTransferFunctionTest1.cpp
VolumeRenderer/CTK/Libs/Visualization/VTK/Core/: ctkVTKColorTransferFunction.h  ctkVTKCompositeFunction.h  ctkVTKConnection.cpp  ctkVTKConnection.h  ctkVTKConnection_p.h  ctkVTKHistogram.h  ctkVTKLookupTable.h  ctkVTKObjectEventsObserver.cpp  ctkVTKObjectEventsObserver.h  ctkVTKPiecewiseFunction.h
VolumeRenderer/CTK/Libs/Visualization/VTK/Core/Testing/Cpp/: ctkVTKColorTransferFunctionTest1.cpp  ctkVTKHistogramTest1.cpp  ctkVTKHistogramTest2.cpp  ctkVTKHistogramTest3.cpp  ctkVTKHistogramTest4.cpp  ctkVTKTransferFunctionRepresentationTest1.cpp
VolumeRenderer/CTK/Libs/Visualization/VTK/Widgets/: ctkVTKPropertyWidget.cpp  ctkVTKScalarsToColorsWidget.cpp  ctkVTKScalarsToColorsWidget.h  ctkVTKTextPropertyWidget.cpp  ctkVTKTextPropertyWidget.h
VolumeRenderer/CTK/Libs/Visualization/VTK/Widgets/Resources/UI/: ctkVTKScalarsToColorsWidget.ui  ctkVTKTextPropertyWidget.ui
VolumeRenderer/CTK/Libs/Widgets/: ctkBasePopupWidget.cpp  ctkBasePopupWidget.h  ctkBasePopupWidget_p.h  ctkCollapsibleGroupBox.cpp  ctkColorDialog.cpp  ctkColorPickerButton.cpp  ctkDoubleRangeSlider.cpp  ctkDoubleRangeSlider.h  ctkDoubleSlider.cpp  ctkDoubleSlider.h  ctkDoubleSpinBox.cpp  ctkDoubleSpinBox.h  ctkDoubleSpinBox_p.h  ctkMaterialPropertyPreviewLabel.cpp  ctkPopupWidget.cpp  ctkPopupWidget.h  ctkPopupWidget_p.h  ctkProxyStyle.cpp  ctkRangeSlider.cpp  ctkRangeSlider.h  ctkRangeWidget.cpp  ctkRangeWidget.h  ctkSliderWidget.cpp  ctkSliderWidget.h  ctkSpinBox.cpp  ctkSpinBox.h
VolumeRenderer/CTK/Libs/Widgets/Resources/: ctkWidgets.qrc
VolumeRenderer/CTK/Libs/Widgets/Resources/UI/: ctkRangeWidget.ui  ctkSliderWidget.ui
VolumeRenderer/Slicer/Modules/Loadable/VolumeRendering/VolumeRenderingReplacements/: vtkSlicerGPURayCastVolumeMapper.h
VolumeRenderer/Slicer/Modules/Loadable/Volumes/Widgets/: qSlicerScalarVolumeDisplayWidget.cxx  qSlicerScalarVolumeDisplayWidget.h  qSlicerVolumeDisplayWidget.cxx  qSlicerVolumeDisplayWidget.h  qSlicerVolumesModuleWidgetsExport.h
VolumeRenderer/Slicer/Modules/Loadable/Volumes/Widgets/Resources/: qSlicerVolumesWidgetsModule.qrc
VolumeRenderer/histogram/: Histogram.cpp  Histogram.h
VolumeRenderer/nvMath/: nvMath.h
data/: CT-Knee.mhd  VisMale.mhd  readme.txt  walnut-transformed.mhd  walnut.mhd
evaluation/: simple.vws  volume_create.py  volume_create.vws  volume_create_2.vws
paraview/: tjet.pvsm  vortex.pvsm
python/: CTengine.vws  ImageJ_tif_to_raw_8bit.ijm  MRknee.vws  SimpleRaycaster.frag  SingleVolumeRaycaster.frag  disk.tfi  disk.vws  generate_string.py  isabel_P.py  isabel_PRECIP.py  isabel_UVW.py  rotate_SimpleRaycaster.py  rotate_SingleVolumeRaycaster.py
python_vtk/: SimpleRayCast.py  SimpleRayCast_tf.py  VolumePicker.py  readme.txt  tf_ramp.tfi
spectrum/: spectrum_16.tfi  spectrum_16_ramp.tfi  spectrum_32.tfi  spectrum_32_ramp.tfi  spectrum_4.tfi  spectrum_4_ramp.tfi  spectrum_6.tfi  spectrum_6_ramp.tfi  spectrum_8.tfi  spectrum_8_ramp.tfi
voreen/: 3dknee.vws  (+140 more)
(+146 files in other folders)
